2007-10-14  Eric Seidel  <eric@webkit.org>

Reviewed by Maciej.

        REGRESSION: Javascript bug in getElementsByName
        http://bugs.webkit.org/show_bug.cgi?id=15274

        Test: fast/dom/getelementbyname-invalidation.html

        * dom/NameNodeList.h: remove empty rootNodeChildrenChanged override

2007-10-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Maciej.

        Test for http://bugs.webkit.org/show_bug.cgi?id=15274
        REGRESSION: Javascript bug in getElementsByName

        * fast/dom/getelementbyname-invalidation-expected.txt: Added.
        * fast/dom/getelementbyname-invalidation.html: Added.


Canonical link: https://commits.webkit.org/20564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26585 268f45cc-cd09-0410-ab3c-d52691b4dbfc